--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ SECRET_CODE= Codigo secreto para express-session
 GOOGLE_CLIENT_ID= client_ID de google para login con passport
 GOOGLE_CLIENT_SECRET= Client secret de google para login con passport
 JWT_SECRET_CODE= Codigo secreto para validacion de tokens de JWT
+GMAIL_PASS= token para iniciar sesion en gmail
+GMAIL_EMAIL= Gmail encargado de hacer el envio de correos
